package tp2.clases.player.score.score_states;

public class CanceledState implements ScoreState {

    @Override
    public int addScore(int scoreToAdd) {
        return 0;
    }
}
