package tp2.clases.player.score.score_states;

public interface ScoreState {

    public abstract int addScore(int scoreToAdd);
}
